# sistema_vendas

./: notes.md  pyproject.toml
app/: main.py
app/database/: connection.py  database.db
app/models/: product.py
